# C-Shell

./: .gitignore  CMakeLists.txt  README.md  SHELL  makefile
include/: exec.h
src/: exec.c  main.c
